changed projects layout, added animation to hello

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container-fluid">
          <nav class="navbar navbar-fixed-top  navbar-toggleable-sm  text-uppercase app-navbar mb-4">
             <button class="navbar-toggler navbar-toggler-right hidden-md-up" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="fontawesome-reorder "></span>
             </button>
             <!-- Nav logo -->
             <a class="navbar-brand mr-auto" href="#home1">
@@ -51,7 +51,7 @@
       <!-- Header -->
       <div class="app-block-intro blue">
          <div class="container-fluid text-xs-center">
-            <h1 class="block-title mb-5 text-uppercase app-myphone-brand"> Hello</h1>
+            <h1 class="block-title mb-5 text-uppercase app-myphone-brand hello_anim"> Hello</h1>
          </div>
       </div>
       <!-- About Me block -->
@@ -59,67 +59,38 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-7 col-md-6 mt-3 mb-3">
-                  <img src="img/nydiapic.jpg" class="pr-4 img-responsive mb-4" data-transition="entrance">
+                  <img src="img/nydiapic.jpg" class="pr-4 img-responsive mb-4 my_pic" data-transition="entrance">
                   <hr class="mt-0 mb-5 mx-auto hidden-md-up">
                </div>
                <div class="col-lg-5 col-md-6 text-center text-md-left mt-4">
                   <h2 class=" block-title mb-3 text-center"> About Me </h2>
                   <p id="about1">
-                     Hello, my name is Nydia Segura and I am a front end web developer. My professional background includes software QA and a degree from the University of Houston in Computer Engineering Technology. I have been diving into the world of web development by immersing myself in HTML, CSS, JavaScript, jQuery. I plan to explore back-end development next. I live in Houston, TX and when I am not following tutorials online, I enjoy running, baking, hanging out with my dogs, and making elaborate chalkboards for my friend's special occasions!
+                     Hello, my name is Nydia Segura and I am a software developer. My professional background includes software QA and a degree from the University of Houston in Computer Engineering Technology. I have been diving into the world of web development by immersing myself in HTML, CSS, JavaScript, jQuery,React and NodeJS. I live in Houston, TX and when I am not following tutorials online, I enjoy running, baking, hanging out with my dogs, and making elaborate chalkboards for my friend's special occasions!
                   </p>
                   <br>
-                  <div class="row mt-3">
-                     <div class="col-6">
-                        <h3 class="mb-3"> What I know:</h3>
-                        <ul>
-                           <li class="list-inline-item">
-                              <i class="devicon-html5-plain-wordmark iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-css3-plain-wordmark iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-javascript-plain iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-bootstrap-plain-wordmark iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-git-plain-wordmark iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-jquery-plain-wordmark iconSkill"> </i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-photoshop-plain iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-python-plain-wordmark iconSkill"></i>
-                           </li>
-                        </ul>
-                     </div>
-                     <div class="col-6">
-                        <h3 class="text-center"> What I am learning: </h3>
-                        <ul>
-                           <li class="list-inline-item">
-                              <i class="devicon-react-original-wordmark iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-nodejs-plain-wordmark iconSkill"> </i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-express-original-wordmark iconSkill"></i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-illustrator-plain iconSkill"> </i>
-                           </li>
-                           <li class="list-inline-item">
-                              <i class="devicon-postgresql-plain-wordmark iconSkill"></i>
-                           </li>
-                        </ul>
-                     </div>
-                  </div>
+                  <h3 class="mb-3"> What I know:</h3>
+                  <div class="icons_skills">
+                    <i class="devicon-html5-plain-wordmark iconSkill"></i>
+                    <i class="devicon-css3-plain-wordmark iconSkill"></i>
+                    <i class="devicon-javascript-plain iconSkill"></i>
+                    <i class="devicon-express-original-wordmark iconSkill"></i>
+                    <i class="devicon-bootstrap-plain-wordmark iconSkill"></i>
+                    <i class="devicon-sass-original iconSkill"></i>
+                    <i class="devicon-git-plain-wordmark iconSkill"></i>
+                    <i class="devicon-jquery-plain-wordmark iconSkill"> </i>
+                    <i class="devicon-postgresql-plain-wordmark iconSkill"></i>
+                    <i class="devicon-python-plain-wordmark iconSkill"></i>
+                    <i class="devicon-nodejs-plain-wordmark iconSkill"> </i>
+                   <br><br>
+                   <h3 class="mb-3"> What I am learning:</h3>
+                   <i class="devicon-react-original-wordmark iconSkill"></i>
+                   <i class="devicon-photoshop-plain iconSkill"></i>
+                   <i class="devicon-mongodb-plain-wordmark iconSkill"></i>
+                   <i class="devicon-illustrator-plain iconSkill"> </i>
+                   <i class="devicon-wordpress-plain-wordmark iconSkill"></i>
+                 </div>
                </div>
+               <br>
             </div>
          </div>
       </div>
@@ -129,57 +100,55 @@
             <div class="col-sm-8 offset-sm-2 text-center mb-2">
                <h1 id="projs" class="mt-5 mb-5">Projects </h1>
             </div>
-            <div class="container-fluid">
-               <div class="row">
-                  <div class="col-sm-6">
-                     <ul class="text-center projects_list">
-                        <li class="mb-5">
-                           <p class="featured-list-icon-text mb-0"><strong>Artist Portfolio Site</strong></p>
-                           <p class="featured-list-icon-text">
-                              Portfolio website to display hand lettering projects.
-                           </p>
-                           <p><strong>Technologies used: HTML, CSS, jQuery, JavaScript, Bootstrap 4 </strong> </p>
-                           <p> <a href="http://nydiaportfolio-com.stackstaging.com/index.html"> See it live! </a> </p>
-                           <p> <a href="https://github.com/ninikat/LetteringPortfolio1"> Github </a> </p>
-                           <p> <img class="rounded text-center img-fluid" src="img/website.png" height=250px> </p>
-                        </li>
-                        <li class="mb-5">
-                           <p class="featured-list-icon-text mb-0"><strong>Click Reactor Game</strong></p>
-                           <p class="featured-list-icon-text">
-                              Game that displays randomly sized and colored squares and circles. Once the shapes are clicked, a timer will display how long the reaction time was.
-                           </p>
-                           <p><strong>Technologies used: HTML, CSS, JavaScript </strong> </p>
-                           <p> <a href="http://reactiontestergame-com.stackstaging.com/"> See it live! </a> </p>
-                           <p> <a href="https://github.com/ninikat/Tracker-Game"> Github </a> </p>
-                           <p> <img class="rounded text-center img-fluid" src="img/trackerGame.png" height=250px> </p>
-                        </li>
-                     </ul>
-                  </div>
-                  <div class="col-sm-6">
-                     <ul class="text-center projects_list">
-                        <li class="mb-5">
-                           <p class="featured-list-icon-text mb-0"><strong> Bookmark Application </strong></p>
-                           <p class="featured-list-icon-text">
-                              Application which takes user inputed web addresses and saves them to a table. Created using tutorial by Traversy Media.
-                           </p>
-                           <p><strong>Technologies used: HTML, CSS, JavaScript, Bootstrap 4 </strong> </p>
-                           <p> <a href="https://codepen.io/nydia-segura/project/full/ArOnRG/"> See it live! </a> </p>
-                           <p> <a href="https://github.com/ninikat/BookmarkApp"> Github </a> </p>
-                           <p> <img class="rounded text-center img-fluid" src="img/bookmarks.png" height=250px> </p>
-                        </li>
-                        <li class="mb-5">
-                           <p class="featured-list-icon-text mb-0"><strong> Pixel Art Maker </strong></p>
-                           <p class="featured-list-icon-text">
-                              Application which allows user to create figures by coloring in a grid.
-                           </p>
-                           <p><strong>Technologies used: HTML, CSS, JavaScript, jQuery </strong> </p>
-                           <p> <a href="http://pixelartmaker-com.stackstaging.com/"> See it live! </a> </p>
-                           <p> <a href="https://github.com/ninikat/PixelArtMaker"> Github </a> </p>
-                           <p> <img class="rounded text-center img-fluid" src="img/pixelArt.png" height=250px> </p>
-                        </li>
-                     </ul>
-                  </div>
-               </div>
+
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-6 text-center mb-2">
+                        <h2 class="featured-list-icon-text mb-0"><strong>Bootcamp Prep Site</strong></h2>
+                        <p class="featured-list-icon-text">
+                           Coding bootcamp prep site that allows users to submit useful resources.
+                        </p>
+                        <p><strong>Technologies used: HTML5, CSS3, jQuery, JavaScript, Firebase, SASS </strong> </p>
+                        <p> <a href="http://dcbcprep-com.stackstaging.com/index.html"> See it live! </a> </p>
+                        <p> <a href="https://github.com/ninikat/builder-prep"> Github </a> </p>
+                </div>
+                <div class="col-sm-6 text-center mb-5">
+                  <p> <img class="rounded text-center img-fluid" src="img/bcprep.png" height=250px> </p>
+                </div>
+              </div>
+            </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-6 text-center mb-2">
+                  <h2 class="featured-list-icon-text mb-0"><strong>FullFill App</strong></h2>
+                  <p class="featured-list-icon-text">
+                     A reddit-style self-improvement website for learning about and adapting new life changes
+                  </p>
+                  <p><strong>Technologies used: HTML5, CSS3, JavaScript, PostgreSQL, Sequelize, NodeJS, ExpressJS, MustacheJS </strong> </p>
+                  <p> <a href="https://www.youtube.com/watch?v=4yHnL0zcra8"> See it live! </a> </p>
+                  <p> <a href="https://github.com/ninikat/fullfillApp"> Github </a> </p>
+                </div>
+                <div class="col-sm-6 text-center mb-5">
+                  <p> <img class="rounded text-center img-fluid" src="img/fullfillsc.png" height=250px> </p>
+                </div>
+              </div>
+            </div>
+<br>
+            <div class="container">
+              <div class="row">
+                <div class="col-sm-6 text-center mb-2">
+                  <h2 class="featured-list-icon-text mb-0"><strong> Pixel Art Maker </strong></h2>
+                  <p class="featured-list-icon-text">
+                     Application which allows user to create figures by coloring in a grid.
+                  </p>
+                  <p><strong>Technologies used: HTML, CSS, JavaScript, jQuery </strong> </p>
+                  <p> <a href="http://pixelartmaker-com.stackstaging.com/"> See it live! </a> </p>
+                  <p> <a href="https://github.com/ninikat/PixelArtMaker"> Github </a> </p>
+                </div>
+                <div class="col-sm-6 text-center mb-5">
+                  <p> <img class="rounded text-center img-fluid" src="img/pixelArt.png" height=200px> </p>
+                </div>
+              </div>
             </div>
          </div>
       </div>
