adding new file

--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
       <div class="app-block-stats">
          <div class="container">
             <div class="row">
-               <div class="col-lg-7 col-md-6 mt-3 mb-3">
+               <div class="col-lg-5 col-md-6 mt-3 mb-3">
                   <img src="img/nydiapic.jpg" class="pr-4 img-responsive mb-4 my_pic" data-transition="entrance">
                   <hr class="mt-0 mb-5 mx-auto hidden-md-up">
                </div>
-               <div class="col-lg-5 col-md-6 text-center text-md-left mt-4">
+               <div class="col-lg-7 col-md-6 text-center text-md-left mt-4">
                   <h2 class=" block-title mb-3 text-center"> About Me </h2>
-                  <p id="about1">
-                     Hello, my name is Nydia Segura and I am a software developer. My professional background includes software QA and a degree from the University of Houston in Computer Engineering Technology. I have been diving into the world of web development by immersing myself in HTML, CSS, JavaScript, jQuery,React and NodeJS. I live in Houston, TX and when I am not following tutorials online, I enjoy running, baking, hanging out with my dogs, and making elaborate chalkboards for my friend's special occasions!
+                  <p>
+                     Hello, my name is Nydia Segura and I am a software developer. My professional background includes software QA and a degree from the University of Houston in Computer Engineering Technology. I have been diving into the world of web development by immersing myself in HTML, CSS, JavaScript, jQuery, Express, React and Node.js. I live in Houston, TX and when I am not following tutorials online, I enjoy running, baking, hanging out with my dogs, and making elaborate chalkboards for my friend's special occasions!
                   </p>
                   <br>
-                  <h3 class="mb-3"> What I know:</h3>
-                  <div class="icons_skills">
+                  <h3 class="mb-3 text-center"> What I know:</h3>
+                  <div class="icons_skills text-center">
                     <i class="devicon-html5-plain-wordmark iconSkill"></i>
                     <i class="devicon-css3-plain-wordmark iconSkill"></i>
                     <i class="devicon-javascript-plain iconSkill"></i>
@@ -78,16 +78,17 @@
                     <i class="devicon-sass-original iconSkill"></i>
                     <i class="devicon-git-plain-wordmark iconSkill"></i>
                     <i class="devicon-jquery-plain-wordmark iconSkill"> </i>
-                    <i class="devicon-postgresql-plain-wordmark iconSkill"></i>
+                    <i class="devicon-wordpress-plain-wordmark iconSkill"></i>
+                    <i class="devicon-mongodb-plain-wordmark iconSkill"></i>
+                     <i class="devicon-illustrator-plain iconSkill"> </i>
                     <i class="devicon-python-plain-wordmark iconSkill"></i>
                     <i class="devicon-nodejs-plain-wordmark iconSkill"> </i>
                    <br><br>
-                   <h3 class="mb-3"> What I am learning:</h3>
+                   <h3 class="mb-3 text-center"> What I am learning:</h3>
                    <i class="devicon-react-original-wordmark iconSkill"></i>
                    <i class="devicon-photoshop-plain iconSkill"></i>
-                   <i class="devicon-mongodb-plain-wordmark iconSkill"></i>
-                   <i class="devicon-illustrator-plain iconSkill"> </i>
-                   <i class="devicon-wordpress-plain-wordmark iconSkill"></i>
+                   <i class="devicon-postgresql-plain-wordmark iconSkill"></i>
+
                  </div>
                </div>
                <br>
@@ -98,7 +99,7 @@
       <div class="container-fluid blue">
          <div class="row">
             <div class="col-sm-8 offset-sm-2 text-center mb-2">
-               <h1 id="projs" class="mt-5 mb-5">Projects </h1>
+               <h1 id="projs" class="mt-5 mb-5"> Development Projects </h1>
             </div>
 
             <div class="container">
@@ -109,8 +110,8 @@
                            Coding bootcamp prep site that allows users to submit useful resources.
                         </p>
                         <p><strong>Technologies used: HTML5, CSS3, jQuery, JavaScript, Firebase, SASS </strong> </p>
-                        <p> <a href="http://dcbcprep-com.stackstaging.com/index.html"> See it live! </a> </p>
-                        <p> <a href="https://github.com/ninikat/builder-prep"> Github </a> </p>
+                        <p> <a href="http://dcbcprep-com.stackstaging.com/index.html" target="_blank"> See it live! </a> </p>
+                        <p> <a href="https://github.com/ninikat/builder-prep" target="_blank"> Github </a> </p>
                 </div>
                 <div class="col-sm-6 text-center mb-5">
                   <p> <img class="rounded text-center img-fluid" src="img/bcprep.png" height=250px> </p>
@@ -120,13 +121,13 @@
             <div class="container">
               <div class="row">
                 <div class="col-sm-6 text-center mb-2">
-                  <h2 class="featured-list-icon-text mb-0"><strong>FullFill App</strong></h2>
+                    <h2 class="featured-list-icon-text mb-0"><strong><i>FullFill App</i></strong></h2>
                   <p class="featured-list-icon-text">
-                     A reddit-style self-improvement website for learning about and adapting new life changes
+                     A reddit-style self-improvement website for learning about and adapting new life changes.
                   </p>
                   <p><strong>Technologies used: HTML5, CSS3, JavaScript, PostgreSQL, Sequelize, NodeJS, ExpressJS, MustacheJS </strong> </p>
-                  <p> <a href="https://www.youtube.com/watch?v=4yHnL0zcra8"> See it live! </a> </p>
-                  <p> <a href="https://github.com/ninikat/fullfillApp"> Github </a> </p>
+                  <p> <a href="https://www.youtube.com/watch?v=4yHnL0zcra8" target="_blank"> See it live! </a> </p>
+                  <p> <a href="https://github.com/ninikat/fullfillApp" target="_blank"> Github </a> </p>
                 </div>
                 <div class="col-sm-6 text-center mb-5">
                   <p> <img class="rounded text-center img-fluid" src="img/fullfillsc.png" height=250px> </p>
@@ -142,36 +143,52 @@
                      Application which allows user to create figures by coloring in a grid.
                   </p>
                   <p><strong>Technologies used: HTML, CSS, JavaScript, jQuery </strong> </p>
-                  <p> <a href="http://pixelartmaker-com.stackstaging.com/"> See it live! </a> </p>
-                  <p> <a href="https://github.com/ninikat/PixelArtMaker"> Github </a> </p>
+                  <p> <a href="http://pixel_art_maker.surge.sh/" target="_blank"> See it live! </a> </p>
+                  <p> <a href="https://github.com/ninikat/PixelArtMaker" target="_blank"> Github </a> </p>
                 </div>
                 <div class="col-sm-6 text-center mb-5">
                   <p> <img class="rounded text-center img-fluid" src="img/pixelArt.png" height=200px> </p>
                 </div>
               </div>
             </div>
+           <div class="container">
+             <h1 class="mt-5 mb-5" style="text-align:center;"> UX Case Studies </h1>
+              <div class="row">
+                <div class="col-sm-6 text-center mb-2">
+                    <h2 class="featured-list-icon-text mb-0"><strong><i>Pie it Forward</i></strong></h2>
+                  <p class="featured-list-icon-text">
+                     A pay-it-forward style appplication that allows users to pre-purchase a slice of pizza for redemption
+                  </p>
+                </div>
+                <div class="col-sm-6 text-center mb-5">
+                  <p> <img class="rounded text-center img-fluid" src="img/portfolio-wireframe.png" height=250px> </p>
+                </div>
+              </div>
+            </div>
          </div>
       </div>
+
       <!-- Contact Me -->
       <div class="text-center">
          <div class="container-fluid">
-            <h2 class="mt-5" id="contactMe">
+            <h2 class="mt-5 mb-4" id="contactMe">
                Contact Me
             </h2>
-            <ul class="list-inline mb-5">
+            <ul class="list-inline mb-4">
                <li class="list-inline-item">
-                  <a href="https://github.com/ninikat" class="fontawesome-github iconf"></a>
+                  <a href="https://github.com/ninikat" class="fontawesome-github iconf" target="_blank"></a>
                </li>
                <li class="list-inline-item">
-                  <a href="https://www.instagram.com/nini_kat/" class="zocial-instagram iconf"></a>
+                  <a href="https://www.instagram.com/nini_kat/" target="_blank" class="zocial-instagram iconf"></a>
                </li>
                <li class="list-inline-item">
-                  <a href=https://www.linkedin.com/in/nydiasegura class="zocial-linkedin iconf"></a>
+                  <a href=https://www.linkedin.com/in/nydiasegura target="_blank" class="zocial-linkedin iconf"></a>
                </li>
                <li class="list-inline-item">
-                  <a href="mailto:nydia.segura@gmail.com" class="zocial-gmail iconf"></a>
+                  <a href="mailto:nydia.segura@gmail.com" target="_blank" class="zocial-gmail iconf"></a>
                </li>
             </ul>
+            <a class="btn button_styles mb-5" target="_blank" href="img/NydiaSeguraReynaResume2018WDb.pdf"> Download Resume</a>
          </div>
       </div>
       <div class="block app-block-footer blue">
