--- a/epwscasestudy.html
+++ b/epwscasestudy.html
@@ -57,7 +57,7 @@
         <div class="container">
            <div class="row">
               <div class="col-sm-12 mb-4 text-center">
-                 <h1 class="mt-4 display-4"> Pie it Forward </h1>
+                 <h1 class="mt-4 display-4"> Exterior Power Washing Solutions </h1>
               </div>
            </div>
         </div>
@@ -65,7 +65,7 @@
      <div class="container">
         <div class="row">
            <div class="col-sm-12 mb-4 text-center">
-              <p class="mb-4 mt-4 h4">Pie it Forward is an application that allows users to pre-pay for a slice of pizza that another user can redeem.  <p>
+              <p class="mb-4 mt-4 h4">Exterior Power Washing Solutions is a business page that needed a makeover.  <p>
            </div>
         </div>
      </div>
