--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
             <!-- Nav -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                <ul class="nav navbar-nav ml-auto">
-                  <li class="nav-item ">
-                     <a class="nav-link" href="#home1">Home</a>
-                  </li>
-                  <li class="nav-item active">
-                     <a class="nav-link" href="#about1">About</a>
-                  </li>
-                  <li class="nav-item ">
-                     <a class="nav-link" href="#projs">Projects</a>
-                  </li>
-                  <li class="nav-item ">
-                     <a class="nav-link" href="#contactMe">Contact</a>
-                  </li>
+                 <li class="nav-item ">
+                    <a class="nav-link" href="/">Home</a>
+                 </li>
+                 <li class="nav-item active">
+                    <a class="nav-link" href="/#about1">About</a>
+                 </li>
+                 <li class="nav-item ">
+                    <a class="nav-link" href="/#ux">UX</a>
+                 </li>
+                 <li class="nav-item ">
+                    <a class="nav-link" href="/#projs">Development</a>
+                 </li>
+                 <li class="nav-item ">
+                    <a class="nav-link" href="/#contactMe">Contact</a>
+                 </li>
                </ul>
             </div>
             <!--/.nav-collapse -->
@@ -65,7 +68,7 @@
                <div class="col-lg-7 col-md-6 text-center text-md-left mt-4">
                   <h2 class=" block-title mb-3 text-center"> About Me </h2>
                   <p>
-                     Hello, my name is Nydia Segura and I am a software developer. My professional background includes software QA and a degree from the University of Houston in Computer Engineering Technology. I have been diving into the world of web development by immersing myself in HTML, CSS, JavaScript, jQuery, Express, React and Node.js. I live in Houston, TX and when I am not following tutorials online, I enjoy running, baking, hanging out with my dogs, and making elaborate chalkboards for my friend's special occasions!
+                     Hello, my name is Nydia Segura and I am a full-stack developer and UX Designer. My professional background includes Software QA and a degree from the University of Houston in Computer Engineering Technology. Testing and searching for bugs in software led me to not only want to build it myself but also to learn how to optimize features and design for better user experiences! I live in Houston, TX and when I am not following tutorials online, I enjoy running, baking, hanging out with my dogs, and making elaborate chalkboard art for my friend's special occasions!
                   </p>
                   <br>
                   <h3 class="mb-3 text-center"> What I know:</h3>
@@ -80,15 +83,12 @@
                     <i class="devicon-jquery-plain-wordmark iconSkill"> </i>
                     <i class="devicon-wordpress-plain-wordmark iconSkill"></i>
                     <i class="devicon-mongodb-plain-wordmark iconSkill"></i>
-                     <i class="devicon-illustrator-plain iconSkill"> </i>
+                    <i class="devicon-react-original-wordmark iconSkill"></i>
+                    <i class="devicon-photoshop-plain iconSkill"></i>
+                    <i class="devicon-illustrator-plain iconSkill"> </i>
                     <i class="devicon-python-plain-wordmark iconSkill"></i>
                     <i class="devicon-nodejs-plain-wordmark iconSkill"> </i>
                    <br><br>
-                   <h3 class="mb-3 text-center"> What I am learning:</h3>
-                   <i class="devicon-react-original-wordmark iconSkill"></i>
-                   <i class="devicon-photoshop-plain iconSkill"></i>
-                   <i class="devicon-postgresql-plain-wordmark iconSkill"></i>
-
                  </div>
                </div>
                <br>
@@ -102,9 +102,9 @@
                <h1 id="projs" class="mt-5 mb-5"> Development Projects </h1>
             </div>
 
-            <div class="container">
+            <div class="container-fluid">
               <div class="row">
-                <div class="col-sm-6 text-center mb-2">
+                <div class="col-sm-6 col-md-4 text-center mb-2">
                         <h2 class="featured-list-icon-text mb-0"><strong>Bootcamp Prep Site</strong></h2>
                         <p class="featured-list-icon-text">
                            Coding bootcamp prep site that allows users to submit useful resources.
@@ -112,15 +112,9 @@
                         <p><strong>Technologies used: HTML5, CSS3, jQuery, JavaScript, Firebase, SASS </strong> </p>
                         <p> <a href="http://dcbcprep-com.stackstaging.com/index.html" target="_blank"> See it live! </a> </p>
                         <p> <a href="https://github.com/ninikat/builder-prep" target="_blank"> Github </a> </p>
+                          <p> <img class="rounded text-center img-fluid project-image" src="img/bcprep.png" height=250px> </p>
                 </div>
-                <div class="col-sm-6 text-center mb-5">
-                  <p> <img class="rounded text-center img-fluid" src="img/bcprep.png" height=250px> </p>
-                </div>
-              </div>
-            </div>
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-6 text-center mb-2">
+                <div class="col-sm-6 col-md-4 text-center mb-2">
                     <h2 class="featured-list-icon-text mb-0"><strong><i>FullFill App</i></strong></h2>
                   <p class="featured-list-icon-text">
                      A reddit-style self-improvement website for learning about and adapting new life changes.
@@ -128,16 +122,9 @@
                   <p><strong>Technologies used: HTML5, CSS3, JavaScript, PostgreSQL, Sequelize, NodeJS, ExpressJS, MustacheJS </strong> </p>
                   <p> <a href="https://www.youtube.com/watch?v=4yHnL0zcra8" target="_blank"> See it live! </a> </p>
                   <p> <a href="https://github.com/ninikat/fullfillApp" target="_blank"> Github </a> </p>
+                  <p> <img class="rounded text-center img-fluid project-image" src="img/fullfillsc.png" height=250px> </p>
                 </div>
-                <div class="col-sm-6 text-center mb-5">
-                  <p> <img class="rounded text-center img-fluid" src="img/fullfillsc.png" height=250px> </p>
-                </div>
-              </div>
-            </div>
-<br>
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-6 text-center mb-2">
+                <div class="col-sm-6 col-md-4 text-center mb-2">
                   <h2 class="featured-list-icon-text mb-0"><strong> Pixel Art Maker </strong></h2>
                   <p class="featured-list-icon-text">
                      Application which allows user to create figures by coloring in a grid.
@@ -145,27 +132,38 @@
                   <p><strong>Technologies used: HTML, CSS, JavaScript, jQuery </strong> </p>
                   <p> <a href="http://pixel_art_maker.surge.sh/" target="_blank"> See it live! </a> </p>
                   <p> <a href="https://github.com/ninikat/PixelArtMaker" target="_blank"> Github </a> </p>
-                </div>
-                <div class="col-sm-6 text-center mb-5">
-                  <p> <img class="rounded text-center img-fluid" src="img/pixelArt.png" height=200px> </p>
+                  <p> <img class="rounded text-center img-fluid project-image" src="img/pixelArt.png" height=200px> </p>
                 </div>
               </div>
             </div>
-           <div class="container">
-             <h1 class="mt-5 mb-5" style="text-align:center;"> UX Case Studies </h1>
-              <div class="row">
-                <div class="col-sm-6 text-center mb-2">
-                    <h2 class="featured-list-icon-text mb-0"><strong><i>Pie it Forward</i></strong></h2>
-                  <p class="featured-list-icon-text">
-                     A pay-it-forward style appplication that allows users to pre-purchase a slice of pizza for redemption
-                  </p>
-                </div>
-                <div class="col-sm-6 text-center mb-5">
-                  <p> <img class="rounded text-center img-fluid" src="img/portfolio-wireframe.png" height=250px> </p>
-                </div>
-              </div>
-            </div>
+<br>
+<hr class="mb-5 mt-5">
          </div>
+         <div class="container-fluid text-center">
+           <h1 id="ux" class="mt-5 mb-5" style="text-align:center;"> UX Case Studies </h1>
+           <div class="container">
+            <div class="row">
+              <div class="col-sm-6 text-center mb-2">
+                  <h2 class="featured-list-icon-text mb-0"><strong><i>Pie it Forward</i></strong></h2>
+                <p class="featured-list-icon-text">
+                   A pay-it-forward style appplication that allows users to pre-purchase a slice of pizza for redemption
+                </p>
+                <a class="btn button_styles mb-3" target="_blank" href="/piecasestudy.html"> View More</a>
+                <p> <img class="rounded text-center img-fluid" src="img/portfolio-wireframe.png" height=250px> </p>
+              </div>
+              <div class="col-sm-6 text-center mb-2">
+                  <h2 class="featured-list-icon-text mb-0"><strong><i>EPWS</i></strong></h2>
+                <p class="featured-list-icon-text">
+                   A business website redesign case study.
+                </p>
+                <br>
+                <a class="btn button_styles mb-3" target="_blank" href="/epwscasestudy.html"> View More</a>
+                <p> <img class="rounded text-center img-fluid" src="img/portfolio-wireframe.png" height=250px> </p>
+              </div>
+
+            </div>
+            </div>
+          </div>
       </div>
 
       <!-- Contact Me -->
