--- a/epwscasestudy.html
+++ b/epwscasestudy.html
@@ -65,7 +65,32 @@
      <div class="container">
         <div class="row">
            <div class="col-sm-12 mb-4 text-center">
-              <p class="mb-4 mt-4 h4">Exterior Power Washing Solutions is a business page that needed a makeover.  <p>
+             <h1 class="mt-4"> The Project </h1>
+             <div class="text-box mb-5">
+              <p class="mb-4 mt-4 h5">Exterior Power Washing Solutions is a business website that needed a makeover. The client felt that the website did not reflect the look of the company. I set out to create a website that was simple, navigable, and would increase new business inquiries. </p>
+              </div>
+              <div class="container top-spacer">
+                <div class="row mb-5">
+                  <div class="col-md-6">
+                  <h2 class="mt-4"> The Old Website </h2>
+                  <p>Since I did not have access to current website data, I started out by wireframing the current homepage as well as creating a sitemap with all the current content. I concluded that the main issues were as follows:
+                    <ul>
+                      <li> Unclear hierarchy since links to other pages were scattered across the homepage.</li>
+                      <li> The picture in the hero area did not reflect the business.</li>
+                      <li> Calls-to-action were not distinguishable between the other links on the page </li>
+                      <li> Important information was not readily available/could be consolidated from other pages </li>
+                    </ul>
+                  </div>
+                  <div class="col-md-6">
+                    <img class="rounded text-center img-fluid project-image-case" src="img/Old-site-wireframe.png">
+                  </div>
+                </div>
+                <div class="top-spacer">
+                  <h2 class="mt-5"> User Research </h2>
+                  <div class="text-box mb-5">
+                  </div>
+                  </div>
+              </div>
            </div>
         </div>
      </div>
